<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="weatherStatus"
            type="net.aung.sunshine.data.vos.WeatherStatusVO" />
    </data>

    <android.support.v7.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/weather_detail_bg"
        app:columnCount="2"
        app:rowCount="3">

        <TextView
            android:id="@+id/lbl_humidity"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:paddingRight="@dimen/margin_medium"
            android:text="@string/lbl_humidity"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="@color/detail_accent_label"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            app:layout_gravity="fill_horizontal"
            />

        <TextView
            android:id="@+id/tv_humidity"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="sans-serif"
            android:text="@{weatherStatus.humidityDisplay}"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_heading_1x"
            app:layout_gravity="center_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:text="99 %" />

        <TextView
            android:id="@+id/lbl_pressure"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:paddingRight="@dimen/margin_medium"
            android:text="@string/lbl_pressure"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <TextView
            android:id="@+id/tv_pressure"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="sans-serif"
            android:text="@{weatherStatus.pressureDisplay}"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_heading_1x"
            android:gravity="center_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:text="1023 hPa" />

        <TextView
            android:id="@+id/lbl_wind"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="sans-serif"
            android:gravity="right|center_vertical"
            android:paddingRight="@dimen/margin_medium"
            android:text="@string/lbl_wind"
            android:textSize="@dimen/text_regular_3x"
            android:textColor="@color/detail_accent_label"
            app:layout_gravity="fill_horizontal"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            />

        <TextView
            android:id="@+id/tv_wind"
            android:layout_width="0dp"
            android:layout_marginLeft="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_medium"
            android:fontFamily="sans-serif"
            android:text="@{weatherStatus.windSpeedDisplay}"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_heading_1x"
            android:gravity="center_vertical"
            app:layout_columnWeight="1"
            app:layout_rowWeight="1"
            tools:text="3 km/h SE" />

    </android.support.v7.widget.GridLayout>

</layout>